# RaftKV

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
config/: config.json
include/: KVDatabase.h  KVDatabaseServer.h  Session.h
scripts/: build.sh
src/: KVDatabase.cpp  KVDatabaseServer.cpp  Session.cpp
